--- a/WebContent/css/validations.css
+++ b/WebContent/css/validations.css
@@ -1,5 +1,18 @@
 @CHARSET "ISO-8859-1";
 
+#backgroundimage {
+	height: 50px;
+	left: 0;
+	margin: 0;
+	min-height: 15%;
+	min-width: 674px;
+	padding: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: -1;
+}
+
 #pswd_info ul {
     list-style: outside none none;
 }
@@ -56,6 +69,11 @@
     top: 50%;
     transform: rotate(45deg);
     width: 25px;
+}
+
+.navbar-inverse {
+    background-color: none;
+    border-color: none;
 }
 
 #user_info {
@@ -248,3 +266,30 @@ border: solid;
  div.fa{
 color: blue;
 }  
+
+#panelchangepass {
+	padding: 10px;
+	margin: 10px;
+	border-radius: 15px;
+	text-align: center;
+	background-color: white;
+	border: solid 5px #c3c3c3;
+	width: 800px;
+	margin: 0 auto;
+	border: solid 1px #00ff00;
+	color: #008040;
+	display: none; 
+}
+#panelassign {
+	padding: 10px;
+	margin: 10px;
+	border-radius: 15px;
+	text-align: center;
+	background-color: white;
+	border: solid 5px #c3c3c3;
+	width: 800px;
+	margin: 0 auto;
+	border: solid 1px #00ff00;
+	color: #008040;
+	display: none; 
+}
